my-test/testsuite_scan/ir/SingleSource/UnitTests/2008-04-18-LoopBug.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/2008-04-18-LoopBug.c:9:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    9 | main() {
      | ^
      | int
1 error generated.
